# worklet

./: .gitignore  readme.md
node-worklet/: CMakeLists.txt
node-worklet-js/: babel.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
node-worklet-js/animation/: index.ts
node-worklet-js/animation/worklet/: Bezier.d.ts  Colors.d.ts  Colors.ts  Easing.d.ts  NativeMethods.ts  PropsRegistry.ts  UpdateProps.d.ts  UpdateProps.ts  ViewDescriptorsSet.d.ts  ViewDescriptorsSet.ts  WorkletEventHandler.d.ts  commonTypes.d.ts  commonTypes.ts  core.d.ts  core.ts  createAnimatedComponent.tsx  errors.d.ts  globals.d.ts  helperTypes.d.ts  helperTypes.ts  initializers.ts  mappers.d.ts  mappers.ts  mutables.d.ts  mutables.ts  shareables.d.ts  shareables.ts  threads.d.ts  threads.ts  utils.d.ts  utils.ts  valueSetter.d.ts  worklet_.d.ts  worklet_.ts
node-worklet-js/animation/worklet/NativeReanimated/: NativeReanimated.d.ts  NativeReanimated.ts  index.ts
node-worklet-js/animation/worklet/animation/: commonTypes.d.ts  commonTypes.ts  decay.d.ts  decay.ts  delay.d.ts  delay.ts  index.d.ts  repeat.d.ts  repeat.ts  sequence.d.ts  sequence.ts  spring.d.ts  spring.ts  springUtils.d.ts  springUtils.ts  styleAnimation.d.ts  styleAnimation.ts  timing.d.ts  timing.ts  util.d.ts  util.ts
node-worklet-js/animation/worklet/animation/transformationMatrix/: matrixUtils.d.ts
node-worklet-js/animation/worklet/frameCallback/: FrameCallbackRegistryUI.d.ts
node-worklet-js/animation/worklet/hook/: commonTypes.d.ts  commonTypes.ts  useAnimatedReaction.ts  useAnimatedScrollHandler.d.ts  useAnimatedScrollHandler.ts  useAnimatedStyle.d.ts  useAnimatedStyle.ts  useScrollViewOffset.d.ts  useScrollViewOffset.ts  useSharedValue.d.ts  useSharedValue.ts  utils.d.ts  utils.ts
node-worklet-js/animation/worklet/touch/: useTouchHandler.d.ts  useTouchHandler.ts
node-worklet-js/plugin/: package-lock.json
node-worklet-js/plugin/types/: commonObjects.d.ts  injectVersion.d.ts  isGestureHandlerEventCallback.d.ts  isLayoutAnimationCallback.d.ts  makeWorklet.d.ts  processForCalleesWorklets.d.ts  processIfCallback.d.ts  processIfWorkletFunction.d.ts  processIfWorkletNode.d.ts  processWorkletObjectMethod.d.ts  types.d.ts  utils.d.ts
node-worklet/include/node/: config.gypi
node-worklet/nodejs/: binding.gyp  compile.sh  index.js  make.sh  package-lock.json  package.json
node-worklet/nodejs/src/: worklet_entry.cpp
node-worklet/third-party-ndk/jsi/: CMakeLists.txt
node-worklet/third-party-ndk/v8/v8_node_v16.20.0/: v8.h
node-worklet/third-party-ndk/v8jsi/: CMakeLists.txt  JSIV8ValueConverter.cpp  V8Runtime.cpp  V8Runtime.h  V8RuntimeConfig.h  yunos.mk
node-worklet/worklet/: ui_thread.h  worklet_log.h
node-worklet/worklet/reanimated/: AgilUIScheduler.cpp  AgilUIScheduler.h  CallInvoker.cpp  CallInvoker.h  ReanimatedModule.cpp  ReanimatedModule.h  ReanimatedNodejs.cpp  ReanimatedNodejs.h
node-worklet/worklet/reanimated/NativeModules/: NativeReanimatedModule.cpp  NativeReanimatedModule.h
node-worklet/worklet/reanimated/ReanimatedRuntime/: ReanimatedRuntime.cpp  ReanimatedRuntime.h
node-worklet/worklet/reanimated/Registries/: EventHandlerRegistry.cpp  EventHandlerRegistry.h
node-worklet/worklet/reanimated/SharedItems/: JSRuntimeHelper.h  RuntimeManager.h  Shareables.cpp  Shareables.h
node-worklet/worklet/reanimated/Tools/: JSISerializer.cpp  JSLogger.h  JSScheduler.h  JsiUtils.h  PlatformDepMethodsHolder.h  ReanimatedHiddenHeaders.h  ReanimatedVersion.cpp  RuntimeDecorator.cpp  RuntimeDecorator.h  UIScheduler.cpp  UIScheduler.h  WorkletEventHandler.h
node-worklet/worklet/reanimated/hidden_headers/: Logger.h  LoggerInterface.h
